fixed a small overflow card bug

--- a/src/components/cards/ListCard.module.css
+++ b/src/components/cards/ListCard.module.css
@@ -9,6 +9,8 @@
     border-radius: 0.5rem;
     margin: 0px 2px;
     cursor: pointer;
+
+    overflow: hidden;
 }
 
 .card:hover{
